--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="preload" href="_next/static/media/ae0a0c671023eecc-s.p.woff2" as="font" crossorigin="" type="font/woff2" />
 		<link rel="preload" href="_next/static/media/c6e04b5f0940e652-s.p.woff2" as="font" crossorigin="" type="font/woff2" />
-		<link rel="preload" as="image" href="assets/bg/02.png" />
+		<link rel="preload" as="image" href="photo_2025-01-25_11-33-16.jpg" />
 		<link rel="preload" as="image" href="assets/logo/01.png" />
 		<link rel="preload" as="image" href="assets/onboarding/05.png" />
 		<link rel="preload" as="image" href="assets/onboarding/06.png" />
@@ -32,7 +32,7 @@
 		<!--$-->
 		<div id="screen" style="opacity:0;transition:opacity 0.5s ease-in-out">
 			<div style="position:absolute;inset:0;z-index:-1;width:100%;height:100%">
-				<img alt="Background" width="0" height="0" decoding="async" data-nimg="1" style="color:transparent;width:100%;height:100%;object-fit:cover;object-position:center" src="assets/bg/02.png" />
+				<img alt="Background" width="0" height="0" decoding="async" data-nimg="1" style="color:transparent;width:100%;height:100%;object-fit:cover;object-position:center" src="photo_2025-01-25_11-33-16.jpg" />
 			</div>
 			<!-- <section style="z-index:1;display:flex;justify-content:center;align-items:center;margin-top:6%;margin-bottom:6%">
 				<img alt="Logo" width="0" height="0" decoding="async" data-nimg="1" style="color:transparent;width:24%;height:auto" src="assets/logo/01.png" />
@@ -72,7 +72,7 @@
 						style="height:50px;width:100%;border-radius:50px;display:flex;justify-content:center;align-items:center;font-size:18px;text-transform:capitalize;font-family:var(--font-league-spartan);font-weight:400;background:var(--accent-color);color:var(--main-color)"
 						href="sign-in.html"
 					>
-						Get Started
+						Начать
 					</a>
 				</div>
 			</section>
