--- a/index.htm
+++ b/index.htm
@@ -46,11 +46,11 @@
 					Enjoy a world of educational toys and games.
 				</p>
 			</section>
-			<section class="container" style="gap:6px;margin-bottom:8%;display:flex;align-items:center;justify-content:center">
+			<!-- <section class="container" style="gap:6px;margin-bottom:8%;display:flex;align-items:center;justify-content:center">
 				<div style="width:22px;height:6px;border-radius:4px;background-color:var(--main-color)"></div>
 				<div style="width:22px;height:6px;border-radius:4px;background-color:#fff"></div>
 				<div style="width:22px;height:6px;border-radius:4px;background-color:#fff"></div>
-			</section>
+			</section> -->
 			<section style="width:100%;height:100%;display:flex;justify-content:center;align-items:center">
 				<div class="swiper">
 					<div class="swiper-wrapper">
