--- a/index.htm
+++ b/index.htm
@@ -69,7 +69,7 @@
 			<section style="padding:20px">
 				<div>
 					<a
-						style="height:50px;width:100%;border-radius:50px;display:flex;justify-content:center;align-items:center;font-size:18px;text-transform:capitalize;font-family:var(--font-league-spartan);font-weight:400;background:var(--accent-color);color:var(--main-color)"
+						style="height:50px;width:100%;border-radius:50px;display:flex;justify-content:center;align-items:center;font-size:18px;text-transform:capitalize;font-family:var(--font-league-spartan);font-weight:400;background: #66bdff;color:var(--main-color)"
 						href="sign-in.html"
 					>
 						Начать
